@@ -1,3 +1,6 @@
+HEAD
+	+ Do not force execution of freshclam after restart as it takes
+	  a very long time to timeout when connection is not successful
 5.0
 	+ Run freshclam daily instead of hourly
 4.2
